# internship-scout-demo

./: .env.example  README.md  internships.md  main.py  profile.py  pyproject.toml
agents/: extractor.py  searcher.py  writer.py
tests/: test_extractor.py  test_writer.py
